--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,1 +1,6 @@
 //
+@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,700;1,900&display=swap');
+@import 'partials/variables';
+@import "partials/common";
+@import 'partials/header';
+@import 'partials/footer';
