--- a/resources/sass/partials/_common.scss
+++ b/resources/sass/partials/_common.scss
@@ -1,42 +1,39 @@
-*{
-    background-color: red;
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
-// * {
-//     margin: 0;
-//     padding: 0;
-//     box-sizing: border-box;
-// }
+html {
+    font-size: 100%;
+    font-family: $fontfamily;
+    text-transform: uppercase;
+}
 
-// html {
-//     font-size: 100%;
-//     font-family: $fontfamily;
-//     text-transform: uppercase;
-// }
+h1 {
+    font-size: 4em;
+}
 
-// h1 {
-//     font-size: 4em;
-// }
+.container {
+    width: 100%;
+    margin: 0 auto;
+}
 
-// .container {
-//     width: 100%;
-//     margin: 0 auto;
-// }
+.center {
+    text-align: center;
+}
 
-// .center {
-//     text-align: center;
-// }
+.clearfix::after{
+    content: '';
+    display: table;
+    clear: both;
+}
 
-// .clearfix::after{
-//     content: '';
-//     display: table;
-//     clear: both;
-// }
+.float{
+    float: left;
+}
 
-// .float{
-//     float: left;
-// }
-
-// .relative{
-//     position: relative;
-// }
+.relative{
+    position: relative;
+}
