--- a/resources/sass/partials/_header.scss
+++ b/resources/sass/partials/_header.scss
@@ -1,7 +1,16 @@
 .container {
-    display: flex;
-    height: 10vh;
+    display: flex; 
+    height: 15vh;
+    justify-content: center;
   }  
+
+  // .blue-line {
+  //   background-color: blue($color: #0400ff);
+  //   color: red;
+  //   width: 100vw;
+  //   height: 5vh;
+  // }
+
 
   .left-header {
     display: flex;
@@ -10,7 +19,8 @@
     width: 20%;
     margin-left: 4em;
     img {
-      width: 20%;
+      width: 40%;
+
     }
   }
   
