--- a/resources/sass/partials/_header.scss
+++ b/resources/sass/partials/_header.scss
@@ -15,12 +15,11 @@
   .left-header {
     display: flex;
     align-items: center;
-    justify-content: left;
+    justify-content: end;
     width: 20%;
     margin-left: 4em;
     img {
-      width: 40%;
-
+      width: 80px;
     }
   }
   
