--- a/public/css/app.css
+++ b/public/css/app.css
@@ -17,6 +17,7 @@ h1 {
 .container {
   width: 100%;
   margin: 0 auto;
+  display: flex;
 }
 
 .center {
@@ -46,12 +47,12 @@ h1 {
 .left-header {
   display: flex;
   align-items: center;
-  justify-content: left;
+  justify-content: end;
   width: 20%;
   margin-left: 4em;
 }
 .left-header img {
-  width: 40%;
+  width: 80px;
 }
 
 .right-header {
@@ -80,4 +81,79 @@ ul li a {
 ul li a:hover, ul li a:active {
   border-bottom: 4px solid #0072cf;
   color: #0072cf;
+}
+
+.footer-top {
+  height: 55vh;
+  display: flex;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 100%;
+}
+
+h1 {
+  color: white;
+  font-size: 120%;
+  padding-top: 1em;
+  padding-bottom: 1em;
+}
+
+ul li {
+  list-style: none;
+}
+ul li a {
+  color: gray;
+  text-decoration: none;
+  text-transform: capitalize;
+}
+
+.col-1, .col-2, .col-3 {
+  padding-left: 4em;
+  padding-top: 2em;
+}
+
+.col-1 .bottom {
+  padding-top: 2em;
+}
+
+.col-4 {
+  padding-right: 4em;
+  margin-left: 12em;
+  position: relative;
+}
+.col-4 img {
+  position: absolute;
+  top: -25px;
+  bottom: 25px;
+}
+
+.contatti {
+  background-color: #3b3b3b;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 10vh;
+}
+
+.sign span, .social span {
+  color: #0072cf;
+  font-weight: bold;
+  align-self: center;
+}
+
+.sign {
+  padding-left: 4em;
+}
+.sign a {
+  color: white;
+  border: 3px solid #0072cf;
+  padding: 0.5em;
+  text-decoration: none;
+}
+
+.social {
+  padding-right: 4em;
+}
+.social a, .social span {
+  margin: 0.3em;
 }
