--- a/resources/sass/partials/_main.scss
+++ b/resources/sass/partials/_main.scss
@@ -58,3 +58,66 @@
 //          }
 //      }
 
+.container-main {
+        background-color: black;
+        text-align: center;
+        position: relative;
+        .container-main-top {
+            background-image: url("../../../public/img/jumbotron.jpg");
+            background-repeat: no-repeat;
+            height: 400px;
+        }
+        .container-main-bottom {
+            width: 80%;
+            margin: 0 auto;
+            padding: 1em 0;
+            display: flex;
+            flex-wrap: wrap;
+        }
+        .container-loadmore {
+            display: inline-block;
+            color: white;
+            padding: 0.3em 1em;
+            margin: 1em;
+            background-color: $text-bg-color-blue;
+            h2 {
+                padding: 0 2em;
+                text-transform: uppercase;
+            }
+        }
+        .container-current-series {
+            display: inline-block;
+            color: white;
+            padding: 0.3em 1em;
+            margin: 1em;
+            background-color: $text-bg-color-blue;
+            position: absolute;
+            top : 35.5%;
+            left: 180px;
+            h2 {
+                padding: 0 1em;
+                font-size: 1.5em;
+                text-transform: uppercase;
+            }
+        }
+        .product {
+        flex-basis: calc(( 100% / 6) - 0.4em);
+        margin: 0.2em;
+        padding: 1em;
+        .container-img {
+            overflow: hidden;
+            width: 200px;
+            height: 200px;
+            img{
+                width: 100%;
+            }
+        }
+        h2 {
+            width: 100%;
+            color: white;
+            font-size: 0.5em;
+            text-transform: uppercase;
+            padding: 0.8em 0 0 0;
+        }
+    }
+    }
