--- a/resources/sass/partials/_header.scss
+++ b/resources/sass/partials/_header.scss
@@ -1,54 +1,51 @@
-.container {
-    display: flex; 
-    height: 15vh;
-    justify-content: center;
-  }  
-
-  // .blue-line {
-  //   background-color: blue($color: #0400ff);
-  //   color: red;
-  //   width: 100vw;
-  //   height: 5vh;
-  // }
-
-
-  .left-header {
-    display: flex;
+.header__nav {
+    display:flex;
+    justify-content: space-between;
     align-items: center;
-    justify-content: end;
-    width: 20%;
-    margin-left: 4em;
-    img {
-      width: 80px;
+    height: 100px;
+    nav{
+        display: flex;
+        
+        input{
+            margin-left: 18px;
+            border: none;
+            text-align: right;
+            padding: 2px 5px;
+            &:active, &:focus, {
+                outline: none;
+                border-bottom: 3px solid #0d77db;
+            }
+        }
+    }    
+    &__list{
+        list-style: none;
+        display: flex;
+        gap: 18px;
     }
-  }
-  
-  .right-header {
-    width: 80%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-right: 4em;
-
-  }
-
-  ul {
-    list-style: none;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    li a {
-      display: block;
-      text-decoration: none;
-      margin: 0.3em;
-      padding-bottom: 3em;
-      padding-top: 3em;
-      color: gray;
-      font-weight: bold;
-      &:hover,
-      &:active {
-        border-bottom: 4px solid $bluemain;
-        color: $bluemain;
-      }
+    &__list-item {
+        a{
+            text-decoration: none;
+            color: black;
+            font-weight: bold;
+            text-transform: uppercase;
+            font-size: 1.2em;
+            &:hover, &:active, &:focus {
+                color: #0d77db;
+            }
+            &.active{
+            color: #0d77db;
+            border-bottom: 5px solid #0d77db;
+            padding-bottom: 35px;
+            }
+            i {
+                color: #0d77db;
+                padding-left: 0.5em;
+            }
+        }
+        
     }
-  }
+}
+
+.header__logo{
+    width: 65px;
+}
